@@ -705,6 +705,7 @@ void	SkyDrawing::draw(QPainter& painter, QSize& size) {
 	}
 
 	// draw solar system objects
+	PlanetDrawing::radius(_radius / 180.);
 	if (show_sun()) {
 		drawSun(painter);
 	}
@@ -984,132 +985,20 @@ void	SkyDrawing::drawConstellations(QPainter& painter) {
 }
 
 /**
- * \brief Draw a solar system body as a circle
+ * \brief compute the position of the planet in the image
  *
- * \param painter	Pointer to use for drawing
- * \param position	position of the object
- * \param radius	radius of the circle to draw
- * \param color		color of the object
+ * This method overrides the one in PlanetDrawing
+ *
+ * \param pos	position of the planet
  */
-void	SkyDrawing::drawSolarsystemBody(QPainter& painter,
-		const astro::RaDec& position,
-		double radius, QColor color, QString label) {
-	astro::AzmAlt	Position = convert(position);
+QPointF	SkyDrawing::position(const astro::RaDec& pos) {
+	astro::AzmAlt	Position = convert(pos);
 	if (Position.alt().radians() < 0) {
-		debug(LOG_DEBUG, DEBUG_LOG, 0, "object not visible");
-		return;
+		throw std::runtime_error("object below horizon");
 	}
 
 	// draw the body
-	QPointF	center = convert(Position);
-	QPainterPath	circle;
-	circle.addEllipse(center, radius, radius);
-	painter.fillPath(circle, color);
-
-	// draw the label
-	if (label.length() == 0) {
-		return;
-	}
-	QPen	pen(Qt::SolidLine);
-	pen.setColor(color);
-	painter.setPen(pen);
-	painter.drawText(center.x() - 15, center.y() - 20,
-		30, 20, Qt::AlignCenter, label);
+	return convert(Position);
 }
-
-/**
- * \brief Draw the moon
- *
- * \param painter	QPainter to draw on
- */
-void	SkyDrawing::drawMoon(QPainter& painter) {
-	astro::solarsystem::Moon	moon;
-	astro::RaDec	moonposition = moon.ephemeris(displaytime());
-
-	// prepare for drawing
-	QColor	moonblue(0,204,255);
-	double	mr = _radius / 180.;
-	if (mr < 7) { mr = 7.; }
-
-	drawSolarsystemBody(painter, moonposition, mr, moonblue, QString());
-}
-
-/**
- * \brief Draw the sun
- *
- * \param painter	QPainter to draw on
- */
-void	SkyDrawing::drawSun(QPainter& painter) {
-	astro::solarsystem::Sun	sun;
-	astro::RaDec	sunposition = sun.ephemeris(displaytime());
-
-	// prepare for drawing
-	QColor	sunyellow(255,255,0);
-	double	sr = _radius / 180.;
-	if (sr < 7) { sr = 7.; }
-
-	drawSolarsystemBody(painter, sunposition, sr, sunyellow, QString());
-}
-
-/**
- * \brief Draw a planet
- *
- * \param painter		the painter to draw on
- * \param rp			relative position for RA/DEC computation
- * \param planet		a pointer to the planet implementation
- * \param pr			planet radius
- * \param planetcolor		color of the planet
- * \param label			the label to place next to the planet
- */
-void	SkyDrawing::drawPlanet(QPainter& painter,
-		astro::solarsystem::RelativePosition& rp,
-		astro::solarsystem::Planetoid *planet,
-		double pr, QColor planetcolor, QString label) {
-	astro::RaDec	planetposition = rp.radec(planet);
-	drawSolarsystemBody(painter, planetposition, pr, planetcolor, label);
-	delete planet;
-}
-
-/**
- * \brief Draw the sun
- *
- * \param painter	QPainter to draw on
- */
-void	SkyDrawing::drawPlanets(QPainter& painter) {
-	astro::solarsystem::JulianCenturies	T(displaytime());
-	astro::solarsystem::Earth	earth;
-	astro::solarsystem::EclipticalCoordinates	earthpos
-		= earth.ecliptical(T);
-	astro::solarsystem::RelativePosition	rp(T, earthpos);
-
-	// determine planetary radius
-	double	pr = _radius / 180.;
-	if (pr < 4) { pr = 4.; }
-
-	astro::solarsystem::Planetoid	*mercury = new astro::solarsystem::Mercury();
-	drawPlanet(painter, rp, mercury, 4, QColor(255,255,204), QString("☿"));
-
-	astro::solarsystem::Planetoid	*venus = new astro::solarsystem::Venus();
-	drawPlanet(painter, rp, venus, 4, QColor(255,255,204), QString("♀︎"));
-
-	astro::solarsystem::Planetoid	*mars = new astro::solarsystem::Mars();
-	drawPlanet(painter, rp, mars, 4, QColor(255,51,51), QString("♂︎"));
-
-	astro::solarsystem::Planetoid	*jupiter = new astro::solarsystem::Jupiter();
-	drawPlanet(painter, rp, jupiter, 4, QColor(255,255,204), QString("♃"));
-
-	astro::solarsystem::Planetoid	*saturn = new astro::solarsystem::Saturn();
-	drawPlanet(painter, rp, saturn, 4, QColor(255,153,153), QString("♄"));
-
-	astro::solarsystem::Planetoid	*uranus = new astro::solarsystem::Uranus();
-	drawPlanet(painter, rp, uranus, 4, QColor(0,204,102), QString("⛢"));
-
-	astro::solarsystem::Planetoid	*neptune = new astro::solarsystem::Neptune();
-	drawPlanet(painter, rp, neptune, 4, QColor(51,153,255), QString("♆"));
-
-	astro::solarsystem::Planetoid	*pluto = new astro::solarsystem::Pluto();
-	drawPlanet(painter, rp, pluto, 4, QColor(102,0,0), QString("♇"));
-}
-
 
 } // namespace snowgui
